# argus

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build_translation_files.yml  publish_release.yml  pytest.yml  ruff.yml
locales/: README.md  il8n.py
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.po
src/argus/: config.py
src/argus/common/: expression_builder.py  list_matching.py  schema_matching.py
src/argus/loaders/: base.py  base_excel_loader.py  excel_loader.py
src/argus/locales/: il8n.py  update_files.sh
src/argus/models/: base.py  base_dataset.py  base_dataset_schemas.py  defaults.py  dynamic_model.py  jmmi.py  preprocess.py  resolver.py
src/argus/orchestrator/: validation_pipeline.py
src/argus/utils/: logging.py  yaml_loader.py
src/argus/validators/: base.py  data_helpers.py  options.py  schema_helpers.py
src/argus/validators/data_validators/: __init__.py  cleaning_log_to_clean_validator.py  column_data_type_validator.py  consent_check_validator.py  cross_sheet_id_check_validator.py  cross_sheet_row_sum_check_validator.py  nan_check_validator.py  pii_validator.py  raw_clean_cleaning_log_validator.py  survey_choices_validator.py  (+1 more)
src/tests/: helpers.py
src/tests/dynamic_schema/: test_create_dynamic_schema.py
src/tests/loader/: jmmi_invalid.xlsx  jmmi_invalid_fuzzy.xlsx  jmmi_valid.xlsx  jmmi_valid_fuzzy.xlsx  test_load_excel_file.py
src/tests/orchestrator/: test_orchestrator.py
src/tests/schema/: test_schema_columns.py  test_schema_sheets.py
(+23 files in other folders)
